--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "better-sqlite3": "^11.10.0",
     "discord.js": "^14.19.2",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "mongoose": "^8.14.2"
   }
 }
